# mixin

./: README.md  pyproject.toml  test.py
src/mixin/: __init__.py
src/mixin/models/: __init__.py
src/mixin/models/auto/: __init__.py  auto_factory.py  configuration_auto.py  modeling_auto_ms.py
src/mixin/models/chatglm/: __init__.py
src/register/models/auto/: modeling_auto.py
