[project]
name = "mixin"
version = "0.0.1"
description = "experimental code for pack-up module and register module"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["deep learning"]
authors = [
    {email = "hzji210@gmail.com"},
    {name =" statelesshz" }
]
requires-python = ">=3.8"
classifiers = [
    # Update if needed. See https://pypi.org/classifiers/
    "Development Status :: 1 - Planning",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
  "transformers",
]

[project.optional-dependencies]
style = ["black", "ruff", "isort"]
test = ["pytest", "pytest-cov"]
pt = ["torch"]
tf = ["tensorflow-cpu>=2.6"]
all = ["mixin[test]", "mixin[pt]"]

[project.urls]
"Homepage" = "https://github.com/statelesshz/mixin"
"Bug Tracker" = "https://github.com/statelesshz/lazymodule/mixin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
